Fix tea remove button in settings

This commit fixes an issue where the Remove button in the Settings window incorrectly modified entries in the tea list. When an item is removed from `m_model`, the list of selected indices briefly becomes empty. This triggers unintended actions, including a call to `Tea::setName()` with an empty `name`, which causes the next entry in `m_model` to be renamed.

This MR resolves the issue by ensuring `SettingsDialog::updateSelection()` does not alter the tea list when items exist but no indices are selected. The current solution may not be the most elegant but is functional. Tested by observing behavior of Add, Move, and Remove buttons.

BUG: 504726
(cherry picked from commit 6537191f3087ba86b7621682fe62630ba25cea9d)